fix popup z-index + title

--- a/src/styles/components/_emailConfirmation.scss
+++ b/src/styles/components/_emailConfirmation.scss
@@ -13,6 +13,7 @@
   border-radius: 10px;
   margin-top: -20px;
   margin-left: -125px;
+  z-index: 100;
 }
 
 .emailConfirmation--disappearing,
@@ -32,4 +33,5 @@
   margin-left: -125px;
   opacity: 0;
   transition: all 250ms linear;
+  z-index: 100;
 }
