--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -8,6 +8,7 @@
   color: white;
   overflow: hidden;
   width: 100%;
+  z-index: 100;
   .layoutContainer_Footer {
     display: flex;
     flex-direction: column;
